--- a/binder/environment.yml
+++ b/binder/environment.yml
@@ -22,3 +22,17 @@ dependencies:
     - pycountry-convert==0.7.2
     - openpyxl==3.0.9
     - networkx==2.6.3
+    - cycler==0.10.0            # via matplotlib
+    - kiwisolver==1.2.0         # via matplotlib
+    - matplotlib==3.2.1
+    - numpy==1.18.5
+    - pandas==1.0.4
+    - pyparsing==2.4.7          # via matplotlib
+    - python-dateutil==2.8.1    # via matplotlib, pandas
+    - pytz==2020.1              # via pandas
+    - scipy==1.4.1              # via seaborn
+    - seaborn==0.10.1
+    - six==1.15.0               # via cycler, python-dateutil
+    - sklearn==0.0
+    - imblearn==0.0
+    - colorama==0.4.4
