--- a/binder/environment.yml
+++ b/binder/environment.yml
@@ -18,5 +18,9 @@ dependencies:
   - pymc3
   - scikit-learn
   - pip:
+    - pycountry==22.1.10
+    - pycountry-convert==0.7.2
+    - openpyxl==3.0.9
+    - networkx==2.6.3
     - imblearn==0.0
     - colorama==0.4.4
