--- a/binder/environment.yml
+++ b/binder/environment.yml
@@ -1,26 +1,198 @@
-name: TDS
+name: borisbike
 channels:
+  - conda-forge
   - defaults
 dependencies:
-  - python=3.7
-  - requests
-  - numpy
-  - pandas
-  - geopandas
-  - descartes
-  - scipy
-  - matplotlib
-  - seaborn
-  - openpyxl
-  - jupyter
-  - autopep8
-  - conda-forge::jupyter_contrib_nbextensions
-  - pymc3
-  - scikit-learn
+  - brotli=1.0.9=h5eb16cf_7
+  - brotli-bin=1.0.9=h5eb16cf_7
+  - c-ares=1.18.1=h0d85af4_0
+  - ca-certificates=2022.9.24=h033912b_0
+  - cartopy=0.21.0=py39hed56034_0
+  - cycler=0.11.0=pyhd8ed1ab_0
+  - freetype=2.12.1=h3f81eb7_0
+  - geos=3.11.0=hb486fe8_0
+  - jpeg=9e=hac89ed1_2
+  - kiwisolver=1.4.4=py39h7c694c3_0
+  - krb5=1.19.3=hb49756b_0
+  - lcms2=2.12=h577c468_0
+  - lerc=4.0.0=hb486fe8_0
+  - libblas=3.9.0=16_osx64_openblas
+  - libbrotlicommon=1.0.9=h5eb16cf_7
+  - libbrotlidec=1.0.9=h5eb16cf_7
+  - libbrotlienc=1.0.9=h5eb16cf_7
+  - libcblas=3.9.0=16_osx64_openblas
+  - libcurl=7.85.0=h57eb407_0
+  - libcxx=14.0.6=h9765a3e_0
+  - libdeflate=1.14=hb7f2c08_0
+  - libedit=3.1.20191231=h0678c8f_2
+  - libev=4.33=haf1e3a3_1
+  - libffi=3.3=hb1e8313_2
+  - libgfortran=5.0.0=10_4_0_h97931a8_25
+  - libgfortran5=11.3.0=h082f757_25
+  - liblapack=3.9.0=16_osx64_openblas
+  - libnghttp2=1.47.0=h7cbc4dc_1
+  - libopenblas=0.3.21=openmp_h429af6e_3
+  - libpng=1.6.38=ha978bb4_0
+  - libsqlite=3.39.4=ha978bb4_0
+  - libssh2=1.10.0=h7535e13_3
+  - libtiff=4.4.0=hdb44e8a_4
+  - libwebp-base=1.2.4=h775f41a_0
+  - libxcb=1.13=h0d85af4_1004
+  - libzlib=1.2.12=hfd90126_3
+  - llvm-openmp=14.0.4=ha654fa7_0
+  - munkres=1.1.4=pyh9f0ad1d_0
+  - ncurses=6.3=hca72f7f_3
+  - openjpeg=2.5.0=h5d0d7b0_1
+  - openssl=1.1.1q=hfe4f2af_0
+  - packaging=21.3=pyhd8ed1ab_0
+  - pillow=9.2.0=py39h4d560c1_2
+  - pip=22.2.2=py39hecd8cb5_0
+  - proj=9.1.0=hcbd9701_0
+  - pthread-stubs=0.4=hc929b4f_1001
+  - pyparsing=3.0.9=pyhd8ed1ab_0
+  - python=3.9.13=hdfd78df_2
+  - python-dateutil=2.8.2=pyhd8ed1ab_0
+  - python_abi=3.9=2_cp39
+  - readline=8.1.2=hca72f7f_1
+  - setuptools=63.4.1=py39hecd8cb5_0
+  - six=1.16.0=pyh6c4a22f_0
+  - sqlite=3.39.3=h707629a_0
+  - tk=8.6.12=h5d9f67b_0
+  - tzdata=2022c=h04d1e81_0
+  - unicodedata2=14.0.0=py39h63b48b0_1
+  - wheel=0.37.1=pyhd3eb1b0_0
+  - xorg-libxau=1.0.9=h35c211d_0
+  - xorg-libxdmcp=1.1.3=h35c211d_0
+  - xz=5.2.6=hca72f7f_0
+  - zlib=1.2.12=h4dc903c_3
+  - zstd=1.5.2=hfa58983_4
   - pip:
-    - pycountry==22.1.10
-    - pycountry-convert==0.7.2
-    - openpyxl==3.0.9
-    - networkx==2.6.3
-    - imblearn==0.0
-    - colorama==0.4.4
+    - affine==2.3.1
+    - anyio==3.6.1
+    - appnope==0.1.3
+    - argon2-cffi==21.3.0
+    - argon2-cffi-bindings==21.2.0
+    - asttokens==2.0.5
+    - attrs==21.4.0
+    - babel==2.10.3
+    - backcall==0.2.0
+    - beautifulsoup4==4.11.1
+    - bleach==5.0.1
+    - bokeh==2.4.3
+    - branca==0.5.0
+    - certifi==2022.6.15
+    - cffi==1.15.1
+    - charset-normalizer==2.1.0
+    - click==8.1.3
+    - click-plugins==1.1.1
+    - cligj==0.7.2
+    - colorcet==3.0.0
+    - contextily==1.2.0
+    - debugpy==1.6.2
+    - decorator==5.1.1
+    - defusedxml==0.7.1
+    - entrypoints==0.4
+    - executing==0.8.3
+    - fastjsonschema==2.16.1
+    - fiona==1.8.21
+    - folium==0.7.0
+    - fonttools==4.34.4
+    - geographiclib==1.52
+    - geopandas==0.11.0
+    - geopy==2.2.0
+    - geoviews==1.9.5
+    - h3==3.7.4
+    - holoviews==1.15.0
+    - hvplot==0.8.0
+    - idna==3.3
+    - importlib-metadata==4.12.0
+    - ipykernel==6.15.1
+    - ipython==8.4.0
+    - ipython-genutils==0.2.0
+    - ipywidgets==7.7.1
+    - jedi==0.18.1
+    - jinja2==3.1.2
+    - joblib==1.2.0
+    - json5==0.9.8
+    - jsonschema==4.7.2
+    - jupyter-client==7.3.4
+    - jupyter-core==4.11.1
+    - jupyter-server==1.18.1
+    - jupyterlab==3.4.4
+    - jupyterlab-pygments==0.2.2
+    - jupyterlab-server==2.15.0
+    - jupyterlab-widgets==1.1.1
+    - markdown==3.4.1
+    - markupsafe==2.1.1
+    - matplotlib==3.5.2
+    - matplotlib-inline==0.1.3
+    - mercantile==1.2.1
+    - mistune==0.8.4
+    - movingpandas==0.9rc3
+    - munch==2.5.0
+    - nbclassic==0.4.3
+    - nbclient==0.6.6
+    - nbconvert==6.5.0
+    - nbformat==5.4.0
+    - nest-asyncio==1.5.5
+    - networkx==2.8.5
+    - notebook==6.4.12
+    - notebook-shim==0.1.0
+    - numpy==1.23.1
+    - ordered-set==4.1.0
+    - pandas==1.4.3
+    - pandocfilters==1.5.0
+    - panel==0.13.1
+    - param==1.12.2
+    - parso==0.8.3
+    - pexpect==4.8.0
+    - pickleshare==0.7.5
+    - prometheus-client==0.14.1
+    - prompt-toolkit==3.0.30
+    - psutil==5.9.1
+    - ptyprocess==0.7.0
+    - pure-eval==0.2.2
+    - pycparser==2.21
+    - pyct==0.4.8
+    - pygments==2.12.0
+    - pymap3d==2.9.1
+    - pyproj==3.3.1
+    - pyrsistent==0.18.1
+    - pyshp==2.3.0
+    - python-louvain==0.16
+    - pytz==2022.1
+    - pyviz-comms==2.2.0
+    - pyyaml==6.0
+    - pyzmq==23.2.0
+    - rasterio==1.3.2
+    - requests==2.28.1
+    - rtree==1.0.0
+    - ruamel-yaml==0.17.21
+    - ruamel-yaml-clib==0.2.6
+    - scipy==1.8.1
+    - seaborn==0.10.1
+    - send2trash==1.8.0
+    - setuptools-scm==7.0.5
+    - shapely==1.8.2
+    - sniffio==1.2.0
+    - snuggs==1.4.7
+    - soupsieve==2.3.2.post1
+    - stack-data==0.3.0
+    - stonesoup==0.1b9
+    - terminado==0.15.0
+    - tinycss2==1.1.1
+    - tomli==2.0.1
+    - tornado==6.2
+    - tqdm==4.64.0
+    - traitlets==5.3.0
+    - typing-extensions==4.3.0
+    - urllib3==1.26.10
+    - utm==0.7.0
+    - wcwidth==0.2.5
+    - webencodings==0.5.1
+    - websocket-client==1.3.3
+    - widgetsnbextension==3.6.1
+    - xlrd==2.0.1
+    - xyzservices==2022.9.0
+    - zipp==3.8.1
+
