--- a/binder/environment.yml
+++ b/binder/environment.yml
@@ -20,52 +20,52 @@ dependencies:
   - libbrotlicommon=1.0.9
   - libbrotlidec=1.0.9
   - libbrotlienc=1.0.9
-  - libcblas=3.9.0=16_osx64_openblas
-  - libcurl=7.85.0=h57eb407_0
-  - libcxx=14.0.6=h9765a3e_0
-  - libdeflate=1.14=hb7f2c08_0
-  - libedit=3.1.20191231=h0678c8f_2
-  - libev=4.33=haf1e3a3_1
-  - libffi=3.3=hb1e8313_2
-  - libgfortran=5.0.0=10_4_0_h97931a8_25
-  - libgfortran5=11.3.0=h082f757_25
-  - liblapack=3.9.0=16_osx64_openblas
-  - libnghttp2=1.47.0=h7cbc4dc_1
-  - libopenblas=0.3.21=openmp_h429af6e_3
-  - libpng=1.6.38=ha978bb4_0
-  - libsqlite=3.39.4=ha978bb4_0
-  - libssh2=1.10.0=h7535e13_3
-  - libtiff=4.4.0=hdb44e8a_4
-  - libwebp-base=1.2.4=h775f41a_0
-  - libxcb=1.13=h0d85af4_1004
-  - libzlib=1.2.12=hfd90126_3
-  - llvm-openmp=14.0.4=ha654fa7_0
-  - munkres=1.1.4=pyh9f0ad1d_0
-  - ncurses=6.3=hca72f7f_3
-  - openjpeg=2.5.0=h5d0d7b0_1
-  - openssl=1.1.1q=hfe4f2af_0
-  - packaging=21.3=pyhd8ed1ab_0
-  - pillow=9.2.0=py39h4d560c1_2
-  - pip=22.2.2=py39hecd8cb5_0
-  - proj=9.1.0=hcbd9701_0
-  - pthread-stubs=0.4=hc929b4f_1001
-  - pyparsing=3.0.9=pyhd8ed1ab_0
-  - python=3.9.13=hdfd78df_2
-  - python-dateutil=2.8.2=pyhd8ed1ab_0
-  - python_abi=3.9=2_cp39
-  - readline=8.1.2=hca72f7f_1
-  - setuptools=63.4.1=py39hecd8cb5_0
-  - six=1.16.0=pyh6c4a22f_0
-  - sqlite=3.39.3=h707629a_0
-  - tk=8.6.12=h5d9f67b_0
-  - tzdata=2022c=h04d1e81_0
-  - unicodedata2=14.0.0=py39h63b48b0_1
-  - wheel=0.37.1=pyhd3eb1b0_0
-  - xorg-libxau=1.0.9=h35c211d_0
-  - xorg-libxdmcp=1.1.3=h35c211d_0
-  - xz=5.2.6=hca72f7f_0
-  - zlib=1.2.12=h4dc903c_3
-  - zstd=1.5.2=hfa58983_4
+  - libcblas=3.9.0
+  - libcurl=7.85.0
+  - libcxx=14.0.6
+  - libdeflate=1.14
+  - libedit=3.1.20191231
+  - libev=4.33
+  - libffi=3.3
+  - libgfortran=5.0.0
+  - libgfortran5=11.3.0
+  - liblapack=3.9.0
+  - libnghttp2=1.47.0
+  - libopenblas=0.3.21
+  - libpng=1.6.38
+  - libsqlite=3.39.4
+  - libssh2=1.10.0
+  - libtiff=4.4.0
+  - libwebp-base=1.2.4
+  - libxcb=1.13
+  - libzlib=1.2.12
+  - llvm-openmp=14.0.4
+  - munkres=1.1.4
+  - ncurses=6.3
+  - openjpeg=2.5.0
+  - openssl=1.1.1q
+  - packaging=21.3
+  - pillow=9.2.0
+  - pip=22.2.2
+  - proj=9.1.0
+  - pthread-stubs=0.4
+  - pyparsing=3.0.9
+  - python=3.9.13
+  - python-dateutil=2.8.2
+  - python_abi=3.9
+  - readline=8.1.2
+  - setuptools=63.4.1
+  - six=1.16.0
+  - sqlite=3.39.3
+  - tk=8.6.12
+  - tzdata=2022c
+  - unicodedata2=14.0.0
+  - wheel=0.37.1
+  - xorg-libxau=1.0.9
+  - xorg-libxdmcp=1.1.3
+  - xz=5.2.6
+  - zlib=1.2.12
+  - zstd=1.5.2
   - pip:
     - affine==2.3.1
     - anyio==3.6.1
