adding back removed libraries

--- a/binder/environment.yml
+++ b/binder/environment.yml
@@ -193,4 +193,9 @@ dependencies:
     - xlrd==2.0.1
     - xyzservices==2022.9.0
     - zipp==3.8.1
+    - pycountry==22.1.10
+    - pycountry-convert==0.7.2
+    - openpyxl==3.0.9
+    - imblearn==0.0
+    - colorama==0.4.4
 
