--- a/stories/2022-10-06-Boris-Bikes/requirements.txt
+++ b/stories/2022-10-06-Boris-Bikes/requirements.txt
@@ -27,7 +27,7 @@ defusedxml==0.7.1; python_version >= "3.7" and python_full_version < "3.0.0" or 
 entrypoints==0.4; python_version >= "3.7"
 executing==0.8.3; python_version >= "3.8"
 fastjsonschema==2.16.1; python_version >= "3.7"
-fiona==1.8.21; python_version >= "3.8"
+fiona>=1.8.21; python_version >= "3.8"
 folium==0.7.0
 fonttools==4.34.4; python_version >= "3.7"
 geographiclib==1.52; python_version >= "3.7"
@@ -58,7 +58,7 @@ kiwisolver==1.4.4; python_version >= "3.7"
 markdown==3.4.1; python_version >= "3.7"
 markupsafe==2.1.1; python_version >= "3.7"
 matplotlib-inline==0.1.3; python_version >= "3.8"
-matplotlib==3.5.2; python_version >= "3.7"
+matplotlib>=3.5.2; python_version >= "3.7"
 mistune==0.8.4; python_version >= "3.7"
 movingpandas==0.9rc3; python_version >= "3.7"
 munch==2.5.0; python_version >= "3.8"
@@ -92,7 +92,7 @@ pyct==0.4.8; python_version >= "3.7"
 pygments==2.12.0; python_version >= "3.8"
 pymap3d==2.9.1; python_version >= "3.7"
 pyparsing==3.0.9; python_full_version >= "3.6.8" and python_version >= "3.7"
-pyproj==3.3.1; python_version >= "3.8"
+pyproj>=3.3.1; python_version >= "3.8"
 pyrsistent==0.18.1; python_version >= "3.7"
 pyshp==2.3.0; python_version >= "3.7"
 python-dateutil==2.8.2; python_version >= "3.8" and python_full_version < "3.0.0" or python_full_version >= "3.3.0" and python_version >= "3.8"
@@ -102,7 +102,7 @@ pyviz-comms==2.2.0; python_version >= "3.7"
 pywin32==304; sys_platform == "win32" and platform_python_implementation != "PyPy" and python_version >= "3.7"
 pywinpty==2.0.6; os_name == "nt" and python_version >= "3.7"
 pyyaml==6.0; python_version >= "3.6"
-pyzmq==23.2.0; python_version >= "3.7"
+pyzmq>=23.2.0; python_version >= "3.7"
 requests==2.28.1; python_version >= "3.7" and python_version < "4"
 rtree==1.0.0; python_version >= "3.7"
 ruamel.yaml.clib==0.2.6; platform_python_implementation == "CPython" and python_version < "3.11" and python_version >= "3.7"
