--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -15,20 +15,14 @@ jobs:
       - name: Set up Quarto
         uses: quarto-dev/quarto-actions/setup@v2
 
-      - name: Install R
-        uses: r-lib/actions/setup-r@v2
+      - name: Render Quarto project
+        uses: quarto-dev/quarto-actions/render@v2
         with:
-          r-version: '4.2.0'
+          to: html
 
-      - name: Install R packages
-        uses: r-lib/actions/setup-r-dependencies@v2
+      - name: Upload files to gh-pages branch
+        uses: peaceiris/actions-gh-pages@v3
         with:
-          packages:
-            any::rmarkdown
-      
-      - name: Publish to GitHub Pages
-        uses: quarto-dev/quarto-actions/publish@v2
-        with:
-          target: gh-pages
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          publish_dir: ./docs
+          publish_branch: gh-pages
